# fastify-pretty-log

./: Cargo.toml  LICENSE  README.md  build.sh
snap/: snapcraft.yaml
src/: main.rs
