[package]
name = "fastify-pretty-log"
version = "0.2.0"
description = "A simple log formatter for fastify"
license = "MIT"
authors = ["Erfan Safari <erfanshield@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
prettytable = "0.10.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
termion = "2.0.1"
